new (submitted) version: fixed citation

--- a/insider.bib
+++ b/insider.bib
@@ -3896,7 +3896,7 @@ note = {{https://eprint.iacr.org/2020/399.pdf}}
 author = {{The DP-3T Project}},
 title = {Response to {'Analysis of DP3T: Between Scylla and Charybdis'}},
 year = 2020,
-note = {{https://eprint.iacr.org/2020/399.pdf}}
+note = {{https://github.com/DP-3T/documents/blob/master/Security analysis/Response to 'Analysis of DP3T'.pdf}}
 }
 
 @misc{enf:bluetooth,
