"the German app" -> "CWA"

--- a/paper.tex
+++ b/paper.tex
@@ -183,7 +183,7 @@ improve security of the Corona-virus app specification.
 
 In this paper, we first provide some background in Section \ref{sec:background}:
 we give a brief overview of related works
-and the protocol of the German app (Section \ref{sec:history}).
+and the protocol of CWA (Section \ref{sec:history}).
 We then introduce the Isabelle Infrastructure framework (Section \ref{sec:isainf}).
 Next, we present our model (Section \ref{sec:model}) and analysis of privacy and
 attacks (Section \ref{sec:ana}). The found attack on the first abstract specification
