--- a/insider.bib
+++ b/insider.bib
@@ -3824,7 +3824,8 @@ year = {2018}
 @misc{bundes:20,
 author = {Die Bundesregierung},
 title = {{Die Corona-Warn-App: Unterst\"utzt uns im Kampf gegen Corona}},
-note = {German government announcement and support of Coronavirus warning app},
+note = {German government announcement and support of Coronavirus warning app,
+        https://www.bundesregierung.de/breg-de/themen/corona-warn-app},
 year = {2020}
 }
 
