--- a/submitted_version_paper.tex
+++ b/submitted_version_paper.tex
@@ -103,8 +103,8 @@ continuously changing Ephemeral Ids (EphIDs) improves the anonymity.
 \section{Introduction}
 \label{sec:intro}
 The German Chancellor Angela Merkel has strongly supported the publication of
-the mobile phone Corona-virus warning app (CWA; \cite{cwa:github}) by publicly proclaiming that the ``Corona
-App deserves your trust'' \cite{bundes:20}. Many millions of mobile phone users
+the mobile phone Corona-virus warning app (CWA; \cite{cwa:github}) by publicly proclaiming that
+``this App deserves your trust'' \cite{bundes:20}. Many millions of mobile phone users
 in Germany have downloaded the app with 6 million on the first day.
 CWA is one amongst many similar applications that aim at the very important goal
 to ``break infection chains'' by providing timely information to users of whether they
